@@ -1,15 +1,14 @@
 package com.checkmarx.intellij.devassist.problems;
 
-import com.checkmarx.intellij.Constants;
 import com.checkmarx.intellij.devassist.model.ScanIssue;
-import com.checkmarx.intellij.util.SeverityLevel;
+import com.checkmarx.intellij.devassist.remediation.CxOneAssistFix;
+import com.checkmarx.intellij.devassist.utils.ScanEngine;
 import com.intellij.codeInspection.ProblemDescriptor;
 import com.intellij.openapi.components.Service;
 import com.intellij.openapi.project.Project;
 import com.intellij.psi.PsiFile;
 import com.intellij.util.messages.Topic;
 
-import java.io.File;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -20,12 +19,13 @@ import java.util.concurrent.ConcurrentHashMap;
  */
 @Service(Service.Level.PROJECT)
 public final class ProblemHolderService {
-    // Scan issues for each file
-    private final Map<String, List<ScanIssue>> fileToIssues = new ConcurrentHashMap<>();
 
-    // Problem descriptors for each file to avoid display empty problems
+    // Scan issues and problem descriptors for each file
+    private final Map<String, List<ScanIssue>> fileToIssues = new ConcurrentHashMap<>();
     private final Map<String, List<ProblemDescriptor>> fileProblemDescriptor = new ConcurrentHashMap<>();
+
     public static final Topic<IssueListener> ISSUE_TOPIC = new Topic<>("ISSUES_UPDATED", IssueListener.class);
+
 
     public interface IssueListener {
         void onIssuesUpdated(Map<String, List<ScanIssue>> issues);
@@ -50,92 +50,14 @@ public final class ProblemHolderService {
     /**
      * Adds problems for the given file.
      *
-     * @param filePath the file path.
-     * @param problems the scan issues.
+     * @param filePath   the file path.
+     * @param scanIssues the scan issues.
      */
-    public synchronized void addScanIssues(String filePath, List<ScanIssue> problems) {
-        fileToIssues.put(filePath, new ArrayList<>(problems));
+    public void addScanIssues(String filePath, List<ScanIssue> scanIssues) {
+        fileToIssues.put(filePath, new ArrayList<>(scanIssues));
         // Notify subscribers immediately
         syncWithCxOneFindings();
     }
-
-    /**
-     * Removes scan issues for the given file.
-     *
-     * @param filePath virtual file path.
-     */
-    public synchronized void removeScanIssues(String filePath) {
-        if (Objects.nonNull(filePath) && !filePath.isEmpty() && fileToIssues.containsKey(filePath)) {
-            fileToIssues.remove(filePath);
-            syncWithCxOneFindings();
-        }
-    }
-
-    public synchronized Map<String, List<ScanIssue>> getAllIssues() {
-        return Collections.unmodifiableMap(fileToIssues);
-    }
-
-    public void removeAllScanIssuesOfType(String scannerType) {
-        for (Map.Entry<String, List<ScanIssue>> entry : getAllIssues().entrySet()) {
-            List<ScanIssue> problems = entry.getValue();
-            if (problems != null) {
-                problems.removeIf(problem -> scannerType.equals(problem.getScanEngine().name()));
-            }
-        }
-        syncWithCxOneFindings();
-    }
-
-    /**
-     * Removes specific scan issue from files where it appears.
-     * The method matches files by comparing their names and removes the specified issue
-     * from all matching files. If removing the issue results in an empty issue list
-     * for a file, that file entry is removed completely.
-     *
-     * @param scanIssueToRemove the scan issue to be removed from files
-     */
-    public void removeProblemsFromFile(ScanIssue scanIssueToRemove) {
-        if (scanIssueToRemove == null) return;
-        String targetPath = scanIssueToRemove.getFilePath();
-        Iterator<Map.Entry<String, List<ScanIssue>>> iterator = fileToIssues.entrySet().iterator();
-        while (iterator.hasNext()) {
-            Map.Entry<String, List<ScanIssue>> entry = iterator.next();
-            String mapPath = entry.getKey();
-            // Match if both paths end with same filename
-            if (targetPath.endsWith(new File(mapPath).getName()) ||
-                    mapPath.endsWith(new File(targetPath).getName())) {
-                List<ScanIssue> issues = entry.getValue();
-                issues.removeIf(issue -> issue.equals(scanIssueToRemove));
-                if (issues.isEmpty()) {
-                    iterator.remove();
-                }
-            }
-        }
-        syncWithCxOneFindings();
-    }
-
-    /**
-     * Update the severity of the scan issue to ignore.
-     * This will mark the issue as ignored in the UI and not appear in the problem window
-     * @param scanIssueToIgnore
-     */
-    public void updateScanIssueForIgnoreVulnerability(ScanIssue scanIssueToIgnore) {
-        for (Map.Entry<String, List<ScanIssue>> entry : fileToIssues.entrySet()) {
-            if(scanIssueToIgnore.getFilePath().isEmpty()) continue;
-            if (scanIssueToIgnore.getFilePath().equalsIgnoreCase(entry.getKey())) {
-                List<ScanIssue> issues = entry.getValue();
-                issues.replaceAll(issue -> {
-                    if (issue.equals(scanIssueToIgnore)) {
-                        issue.setSeverity(SeverityLevel.IGNORED.getSeverity());
-                        return issue;
-                    }
-                    return issue;
-                });
-            }
-        }
-        syncWithCxOneFindings();
-    }
-
-
 
     /**
      * Returns the scan issues for the given file.
@@ -143,8 +65,74 @@ public final class ProblemHolderService {
      * @param filePath the file path.
      * @return the scan issues.
      */
-    public synchronized List<ScanIssue> getScanIssueByFile(String filePath) {
-        return fileToIssues.getOrDefault(filePath, Collections.emptyList());
+    public List<ScanIssue> getScanIssueByFile(String filePath) {
+        return Collections.unmodifiableList(fileToIssues.getOrDefault(filePath, List.of()));
+    }
+
+    /**
+     * Returns all scan issues.
+     */
+    public Map<String, List<ScanIssue>> getAllIssues() {
+        return Collections.unmodifiableMap(fileToIssues);
+    }
+
+    /**
+     * Removes scan issues for the given file.
+     *
+     * @param filePath virtual file path.
+     */
+    public void removeScanIssues(String filePath) {
+        if (Objects.nonNull(filePath) && !filePath.isEmpty() && fileToIssues.containsKey(filePath)) {
+            fileToIssues.remove(filePath);
+            syncWithCxOneFindings();
+        }
+    }
+
+    /**
+     * Removes all scan issues of a given scanner type.
+     */
+    public void removeAllScanIssuesOfType(String scannerType) {
+        fileToIssues.values().forEach(scanIssues -> {
+            if (Objects.nonNull(scanIssues) && !scanIssues.isEmpty()) {
+                scanIssues.removeIf(scanIssueObj -> scannerType.equals(scanIssueObj.getScanEngine().name()));
+            }
+        });
+        syncWithCxOneFindings();
+    }
+
+    /**
+     * Removes all scan issues of a given scanner type for a file.
+     *
+     * @param scannerType the scanner type. e.g., OSS, ASCA etc.
+     */
+    public void removeScanIssuesByFileAndScanner(String scannerType, String filePath) {
+        if (fileToIssues.isEmpty() || Objects.isNull(filePath) || filePath.isEmpty()
+                || Objects.isNull(scannerType) || scannerType.isEmpty() || !fileToIssues.containsKey(filePath)) {
+            return;
+        }
+        List<ScanIssue> scanIssuesList = fileToIssues.get(filePath);
+        if (Objects.isNull(scanIssuesList) || scanIssuesList.isEmpty()) {
+            return;
+        }
+        scanIssuesList.removeIf(scanIssue -> scannerType.equalsIgnoreCase(scanIssue.getScanEngine().name()));
+        syncWithCxOneFindings();
+    }
+
+    /**
+     * Merges new scan issues into the existing list for the given file path.
+     *
+     * @param filePath  the file path.
+     * @param newIssues the new issues to add.
+     */
+    public void mergeScanIssues(String filePath, List<ScanIssue> newIssues) {
+        fileToIssues.compute(filePath, (key, existingIssues) -> {
+            List<ScanIssue> updatedList = (Objects.isNull(existingIssues) || existingIssues.isEmpty())
+                    ? new ArrayList<>()
+                    : new ArrayList<>(existingIssues);
+            updatedList.addAll(newIssues);
+            return updatedList;
+        });
+        syncWithCxOneFindings();
     }
 
     /**
@@ -153,8 +141,8 @@ public final class ProblemHolderService {
      * @param filePath the file path.
      * @return the problem descriptors.
      */
-    public synchronized List<ProblemDescriptor> getProblemDescriptors(String filePath) {
-        return fileProblemDescriptor.getOrDefault(filePath, Collections.emptyList());
+    public List<ProblemDescriptor> getProblemDescriptors(String filePath) {
+        return Collections.unmodifiableList(fileProblemDescriptor.getOrDefault(filePath, List.of()));
     }
 
     /**
@@ -163,7 +151,7 @@ public final class ProblemHolderService {
      * @param filePath           the file path.
      * @param problemDescriptors the problem descriptors.
      */
-    public synchronized void addProblemDescriptors(String filePath, List<ProblemDescriptor> problemDescriptors) {
+    public void addProblemDescriptors(String filePath, List<ProblemDescriptor> problemDescriptors) {
         fileProblemDescriptor.put(filePath, new ArrayList<>(problemDescriptors));
     }
 
@@ -177,11 +165,43 @@ public final class ProblemHolderService {
     }
 
     /**
-     * Clears all problem descriptors.
+     * Removes all problem descriptors for the given file by scanner type.
+     *
+     * @param filePath   - virtual file path
+     * @param scanEngine - scan engine type
      */
-    public void removeAllProblemDescriptors() {
-        fileProblemDescriptor.clear();
+    public void removeProblemDescriptorsForFileByScanner(String filePath, ScanEngine scanEngine) {
+        if (fileProblemDescriptor.isEmpty() || Objects.isNull(scanEngine) || Objects.isNull(filePath) ||
+                filePath.isEmpty() || !fileProblemDescriptor.containsKey(filePath)) {
+            return;
+        }
+        List<ProblemDescriptor> problemDescriptors = fileProblemDescriptor.get(filePath);
+        if (Objects.isNull(problemDescriptors) || problemDescriptors.isEmpty()) {
+            return;
+        }
+        problemDescriptors.removeIf(descriptor -> {
+            CxOneAssistFix fix = (CxOneAssistFix) descriptor.getFixes()[0];
+            return fix != null && scanEngine.name().equalsIgnoreCase(fix.getScanIssue().getScanEngine().name());
+        });
     }
+
+    /**
+     * Merges new problem descriptors into the existing list for the given file path.
+     *
+     * @param filePath    the file path.
+     * @param newProblems the new problem descriptors to add.
+     */
+    public void mergeProblemDescriptors(String filePath, List<ProblemDescriptor> newProblems) {
+        fileProblemDescriptor.compute(filePath, (key, existingProblems) -> {
+            // Creating a new combined list to avoid modifying shared references
+            List<ProblemDescriptor> updatedList = (Objects.isNull(existingProblems) || existingProblems.isEmpty())
+                    ? new ArrayList<>()
+                    : new ArrayList<>(existingProblems);
+            updatedList.addAll(newProblems);
+            return updatedList;
+        });
+    }
+
 
     /**
      * Adds problems to the CxOne findings for the given file.
@@ -199,37 +219,4 @@ public final class ProblemHolderService {
     private void syncWithCxOneFindings() {
         project.getMessageBus().syncPublisher(ISSUE_TOPIC).onIssuesUpdated(getAllIssues());
     }
-
-    /**
-     * Removes a specific problem descriptor from the given file by line number.
-     *
-     * @param filePath the file path.
-     * @param lineNumber the line number of the problem descriptor to remove (1-based).
-     * @param issueId (clickId) ScanIssueId Take here the clickId, and compare that inside problemdescriptor
-     */
-    public void removeProblemDescriptorByLine(String filePath, int lineNumber) {
-        List<ProblemDescriptor> descriptors = fileProblemDescriptor.get(filePath);
-        if (descriptors == null || descriptors.isEmpty()) {
-            return;
-        }
-        // Use ProblemDescriptor.getLineNumber() directly (0-based)
-        Iterator<ProblemDescriptor> iterator = descriptors.iterator();
-        boolean removed = false;
-        //* use stream api below/ or try to remove directly from concurrentmap
-        while (iterator.hasNext()) {
-            ProblemDescriptor descriptor = iterator.next();
-            if (descriptor.getLineNumber() == lineNumber - 1) {  // Convert 1-based to 0-based
-                iterator.remove();
-                removed = true;
-                break;  // Remove only first match per line
-            }
-        }
-        if (removed) {
-            fileProblemDescriptor.put(filePath, descriptors);
-        }
-    }
-
-    // How many problemdescriptor on same line
-    // Iterate on that - And in localQuickFix get ScanIssue , check id in the scanissu, and if mathcing remove that problemdescriptor
-    // Check how we can trigger particular engine for file
 }
